[FIX] pos receipt

--- a/pos_customs/views/pos_payment.xml
+++ b/pos_customs/views/pos_payment.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <data>
-        <record id="action_owl_sales_payment_method_dashboard" model="ir.actions.client">
+        <!-- <record id="action_owl_sales_payment_method_dashboard" model="ir.actions.client">
             <field name="name">Sales Dashboard</field>
             <field name="tag">owl.ttal_sales_payment_method</field>
         </record>
@@ -11,7 +11,20 @@
             name="My Dashboard"
             action="action_owl_sales_payment_method_dashboard"
             parent="point_of_sale.menu_point_root"
-            sequence="10"/>
+            sequence="10"/> -->
+
+
+    <record id="view_pos_payment_tree_inherit_pos_customs" model="ir.ui.view">
+        <field name="name">pos.payment.view.form.inherit</field>
+        <field name="model">pos.payment</field>
+        <field name="inherit_id" ref="point_of_sale.view_pos_payment_tree"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='payment_method_id']" position="after">
+                <field name="transaction_id" />
+            </xpath>
+        </field>
+    </record>
+ 
 
 
  
