--- a/invoice_picking/views/account_move.xml
+++ b/invoice_picking/views/account_move.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//group[@id='header_right_group']/field[@name='currency_id']" position="after">
-                <field name="validate_picking" attrs="{'readonly': [('state', '=', 'posted')]}"/>
+                <field name="validate_picking" attrs="{'readonly': [('state', '=', 'posted')],'invisible':[('move_type', '!=', 'in_invoice')]}"/>
                 <field name="warehouse_id" options="{'no_create': True, 'no_open': True}" attrs="{'invisible': [('validate_picking', '!=', True)], 'readonly': [('state', '=', 'posted')]}"/>
                 <field name="auto_post_picking" attrs="{'invisible': [('validate_picking', '!=', True)], 'readonly': [('state', '=', 'posted')]}"/>
             </xpath>
