--- a/pos_customs/reports/report_sale_details.xml
+++ b/pos_customs/reports/report_sale_details.xml
@@ -5,6 +5,15 @@
         <xpath expr="//table[1]/tbody/tr/td[1]" position="replace">
             <td><t t-esc="internal_reference"/><t t-esc="line['product_name']"/>-<t t-esc="line['product_variant_name']"/></td>
         </xpath>
+
+        <xpath expr="//div[hasclass('page')]/strong" position="after">
+            <div>
+                <strong>Starting balance: <t t-esc="starting_balance"/></strong><br/>
+                <strong>Actual Ending Balance: <t t-esc="ending_balance"/></strong><br/>
+                <strong>Expected Ending Balance: <t t-esc="expected_ending_balance"/></strong><br/>
+                <strong>Closing Balance Difference: <t t-esc="cash_register_diff"/></strong>
+            </div>
+        </xpath>
     </template>
 
 </odoo>
