[FIX] session sales paper format updated

--- a/pos_customs/reports/report_sale_details.xml
+++ b/pos_customs/reports/report_sale_details.xml
@@ -38,6 +38,10 @@
     </template>
 
     <template id="report_saledetails_inherit" name="report_saledetails_inherit" inherit_id="point_of_sale.report_saledetails">
+        <xpath expr="//t[@t-call='web.internal_layout']" position="attributes">
+            <attribute name="t-call">web.basic_layout</attribute>
+        </xpath>
+        
         <xpath expr="//table[1]/tbody/tr/td[1]" position="replace">
             <td><t t-esc="internal_reference"/><t t-esc="line['product_name']"/>-<t t-esc="line['product_variant_name']"/></td>
         </xpath>
