--- a/pos_sale_order_archiving/wizard/wizard_batch_pos_order_archive.xml
+++ b/pos_sale_order_archiving/wizard/wizard_batch_pos_order_archive.xml
@@ -3,13 +3,13 @@
 
     <record id="wiz_batch_pos_order_archive_view_form" model="ir.ui.view">
         <field name="name">wiz.batch.pos.order.archive.view.form</field>
-        <field name="model">wizard.batch.pos.order.archive</field>
+        <field name="model">wizard.manual.pos.order.archive</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
                     <group>
-                        <field name="from_date" />
-                        <field name="to_date" />
+                        <field name="month" />
+                        <field name="years"/>
                     </group>
                     <footer>
                         <button name="action_pos_order_archive" string="Generate" type="object" class="btn-primary"/>
@@ -20,9 +20,9 @@
         </field>
     </record>
 
-    <record id="wiz_batch_pos_order_archive_action" model="ir.actions.act_window">
+    <record id="wiz_manual_pos_order_archive_action" model="ir.actions.act_window">
         <field name="name">Batch PoS Order Archive</field>
-        <field name="res_model">wizard.batch.pos.order.archive</field>
+        <field name="res_model">wizard.manual.pos.order.archive</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
         <field name="domain">[]</field>
