--- a/pos_customs/views/account.xml
+++ b/pos_customs/views/account.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+
+        <menuitem
+            id="custom_dashboard_menu"
+            name="Dashboard"
+            sequence="10"/>
+            
         <record id="action_invoicing_dashboard" model="ir.actions.client">
             <field name="name">Report Dashboard</field>
             <field name="tag">pos_customs.owlAccountingDashboard</field>
@@ -10,7 +16,7 @@
             id="invoicing_dashboard_menu"
             name="Point of Sale"
             action="action_invoicing_dashboard"
-            parent="spreadsheet_dashboard.spreadsheet_dashboard_menu_root"
+            parent="pos_customs.custom_dashboard_menu"
             groups="point_of_sale.group_pos_manager"
             sequence="0" />
 
@@ -19,6 +25,11 @@
             id="point_of_sale.menu_pos_dashboard"
             parent="point_of_sale.menu_point_root"
             name="Terminals"/>
+
+
+        <menuitem
+            id="spreadsheet_dashboard.spreadsheet_dashboard_menu_root"
+            active="0"/>
     </data>
 
 
