--- a/pos_customs/views/account.xml
+++ b/pos_customs/views/account.xml
@@ -5,7 +5,9 @@
         <menuitem
             id="custom_dashboard_menu"
             name="Dashboard"
-            sequence="10"/>
+            sequence="10"
+            groups="pos_customs.custom_dashboard_access"
+            />
 
         <record id="action_invoicing_dashboard" model="ir.actions.client">
             <field name="name">Report Dashboard</field>
