--- a/odoo_rebrand/views/webclient_templates.xml
+++ b/odoo_rebrand/views/webclient_templates.xml
@@ -7,7 +7,7 @@
                 <head>
                     <meta charset="utf-8" />
                     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-                    <title t-esc="title or 'Cloudapiffy'" />
+                    <title t-esc="title or 'CloudAppify'" />
                     <link type="image/x-icon" rel="shortcut icon"
                         t-att-href="x_icon or '/web/static/img/favicon.ico'" />
                     <script id="web.layout.odooscript" type="text/javascript"> var odoo = {
