--- a/pos_customs/views/pos_order.xml
+++ b/pos_customs/views/pos_order.xml
@@ -5,9 +5,9 @@
     <field name="model">pos.order</field>
     <field name="inherit_id" ref="point_of_sale.view_pos_pos_form"/>
     <field name="arch" type="xml">
-     <xpath expr="//header" position="inside">
+     <!-- <xpath expr="//header" position="inside">
         <button string="Cancel" states="paid,done,invoiced" name="action_pos_order_cancel" type="object" class="oe_highlight"/>
-     </xpath>
+     </xpath> -->
 
 
     <!-- Add field on Payments tab -->
