[FIX] donntot override color of i

--- a/odoo_rebrand/static/src/scss/primary_variables.scss
+++ b/odoo_rebrand/static/src/scss/primary_variables.scss
@@ -4,6 +4,6 @@ $o-brand-odoo:#2b48c1;
 // $o-brand-odoo:#3286d4;
 
 
-i{
-    color: $o-brand-odoo !important
-}
+// i{
+//     color: $o-brand-odoo !important
+// }
